修复模型选择不生效问题，思考内容被json误解析问题。
